EKS-Bhupendra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: e-commerce
  labels:
    environment: production
