EKS-Bhupendra/promtail-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail-daemonset
  namespace: monitoring
  labels:
    k8s-app: promtail-loki
spec:
  selector:
    matchLabels:
      name: promtail
  template:
    metadata:
      labels:
        name: promtail
    spec:
      serviceAccountName: promtail-serviceaccount
      containers:
        - name: promtail-agent
          image: grafana/promtail:latest
          args: # <-- 1. Config arg added
            - -config.file=/etc/promtail/promtail.yaml
          resources:
            limits:
              memory: 200Mi
            requests:
              cpu: 50m
              memory: 100Mi
          volumeMounts:
            - name: varlog
              mountPath: /var/log
            - name: config # <-- 2. Config mount added
              mountPath: /etc/promtail
      terminationGracePeriodSeconds: 30
      volumes:
        - name: varlog
          hostPath:
            path: /var/log
        - name: config # <-- 3. Config volume added
          configMap:
            name: promtail-config
