EKS-Bhupendra/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart
  labels:
    app: cart
spec:
  selector:
    app: cart
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
