EKS-Bhupendra/dispatch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dispatch
  labels:
    app: dispatch
spec:
  selector:
    app: dispatch
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
