EKS-Bhupendra/shipping-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping
spec:
  selector:
    app: shipping
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
