EKS-Bhupendra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: robot-shop-ingress
  namespace: e-commerce
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
    - http:
        paths:
          # 1. Main Robot-Shop App
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
          # 2. Grafana Dashboard (pointing to our redirect service)
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana-redirect-service
                port:
                  number: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-redirect-service
  namespace: e-commerce
spec:
  type: ExternalName
  externalName: prometheus-stack-grafana.monitoring.svc.cluster.local
  ports:
    - port: 80
